--- a/wordle-js/style.css
+++ b/wordle-js/style.css
@@ -56,6 +56,9 @@ body {
 .on-good-place {
   background-color: #aaf46a90;
 }
+.is-not-in-word {
+  background-color: rgba(73, 73, 73, 0.596);
+}
 .keyboard {
   display: flex;
   flex-direction: column;
