--- a/wordle-react/src/components/board/board.scss
+++ b/wordle-react/src/components/board/board.scss
@@ -3,8 +3,8 @@
     height: 60vh;
     margin-top: 5px;
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 16.6% 16.6% 16.6% 16.6% 16.6% 16.6%;
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(6, 16.6%);
 }
 
 .grid-letter {
