--- a/wordle-react/src/components/keyboard/keyboard.scss
+++ b/wordle-react/src/components/keyboard/keyboard.scss
@@ -1,25 +1,30 @@
+$keyColor: #888;
+$keyHoverColor: #666;
+
 .keyboard {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-//   width: 40vw;
-  width: 600px;
+  width: 50vw;
+  // width: 600px;
+  min-width: 300px;
 }
 .key {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  background-color: #888;
+  background-color: $keyColor;
   border-radius: 3px;
-  padding: 18px 15px;
-  max-height: 60px;
-  min-width: 10px;
+  padding: 2vh 1.5vw;
+  // max-height: 80px;
+  // min-width: 10px;
   margin: 4px;
-}
-.key:hover {
-  background-color: #666;
-  cursor: pointer;
+
+  &:hover {
+    background-color: $keyHoverColor;
+    cursor: pointer;
+  }
 }
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
